--- a/addProduct.html
+++ b/addProduct.html
@@ -13,6 +13,8 @@
     <!-- End layout styles -->
     <link rel="shortcut icon" href="assets/images/favicon.png" />
 
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/thinline.css">
+
     <!-- Custom CSS-->
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/style.css">
@@ -317,7 +319,7 @@
                 <h1 class="text-center">Add Product</h1>
                 <div class="content">
                     <!-- Product Add form -->
-                    <form action="#">
+                    <form action="#" method="post" enctype="multipart/form-data">
                       <div class="user-details full-input-box">
                         <!-- title -->
                         <div class="input-box">
@@ -361,6 +363,40 @@
                           <span class="details">Description</span>
                           <input type="text" placeholder="Enter your product description" required>
                         </div>
+                        <!-- Size -->
+                        <span class="details">Product Available Size</span>
+                        <div class="input-checkbox">
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="S" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                              S
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="M" id="flexCheckChecked">
+                            <label class="form-check-label" for="flexCheckChecked">
+                              M
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="L" id="flexCheckChecked">
+                            <label class="form-check-label" for="flexCheckChecked">
+                              L
+                            </label>
+                            <div class="form-check">
+                              <input class="form-check-input" type="checkbox" value="XL" id="flexCheckChecked">
+                              <label class="form-check-label" for="flexCheckChecked">
+                                XL
+                              </label>
+                            </div>
+                            <div class="form-check">
+                              <input class="form-check-input" type="checkbox" value="XXL" id="flexCheckChecked">
+                              <label class="form-check-label" for="flexCheckChecked">
+                                XXL
+                              </label>
+                            </div>
+                          </div>
+                        </div>
                         <!-- main image -->
                         <div>
                           <span class="details">Attach Primary Image</span>
@@ -399,7 +435,7 @@
           <!--------------------------->
           <!-- END ADD PRODUCT AREA -->
           <!--------------------------->
-
+          
 
           <!-- partial:partials/_footer.html -->
           <footer class="footer">
@@ -418,7 +454,6 @@
     <script src="assets/vendors/js/vendor.bundle.base.js"></script>
     <script src="assets/js/off-canvas.js"></script>
     <script src="assets/js/misc.js"></script>
-
 
   </body>
 </html>
