--- a/viewProduct.html
+++ b/viewProduct.html
@@ -313,6 +313,9 @@
             </div>
             <div class="row">
               <h1>Product List</h1>
+              <form class="form-group" action="#">
+                <input type="search" name="search" id="search" placeholder="Search Product" class="form-control">
+              </form>
               <div class="container grid-container mens-fashion-products">
                 <!-- Men's Product Will Add Automatically -->
             </div>
