--- a/deleteCategory.html
+++ b/deleteCategory.html
@@ -311,11 +311,114 @@
               </nav>
             </div>
             <br>
-            
             <div class="row">
               <h1>Delete Category</h1>
+              <!-- Table Area -->
+              <div style="overflow-y: auto;">
+                <table class="table table-bordered">
+                  <tbody>
+                      <tr>
+                        <th>Serial No</th>
+                        <th>Main Category Name</th>
+                        <th class="text-center" colspan="3">Sub Categories</th>
+                        <th>Action</th>
+                      </tr>
+                      <tr>
+                        <td rowspan="5">1</td>
+                        <td rowspan="5">Mens</td>
+                        <th>Serial No</th>
+                        <th>Sub Category Name</th>
+                        <th>Action</th>
+                        <td rowspan="5"><button class="btn btn-dark">Delete</button></td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Shirt</td>
+                        <td><button class="btn btn-danger">Delete</button></td>
+                      </tr>
+                      <tr>
+                        <td>2</td>
+                        <td>Pant</td>
+                        <td><button class="btn btn-danger">Delete</button></td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>Polo T-Shirt</td>
+                        <td><button class="btn btn-danger">Delete</button></td>
+                      </tr>
+                      <tr>
+                        <td>4</td>
+                        <td>Panjabi</td>
+                        <td>
+                          <button class="btn btn-danger">Delete</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td rowspan="5">2</td>
+                        <td rowspan="5">Womens</td>
+                        <th>Serial No</th>
+                        <th>Sub Category Name</th>
+                        <th>Action</th>
+                        <td rowspan="5">
+                          <button class="btn btn-dark">Delete</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Tops</td>
+                        <td>
+                          <button class="btn btn-danger">Delete</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>2</td>
+                        <td>Tops Long</td>
+                        <td>
+                          <button class="btn btn-danger">Delete</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>Kamij</td>
+                        <td>
+                          <button class="btn btn-danger">Delete</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>4</td>
+                        <td>Ladies Pant</td>
+                        <td>
+                          <button class="btn btn-danger">Delete</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td rowspan="3">3</td>
+                        <td rowspan="3">Kids</td>
+                        <th>Serial No</th>
+                        <th>Sub Category Name</th>
+                        <th>Action</th>
+                        <td rowspan="3">
+                          <button class="btn btn-dark">Delete</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Toy</td>
+                        <td>
+                          <button class="btn btn-danger">Delte</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>2</td>
+                        <td>Baby Lotion</td>
+                        <td>
+                          <button class="btn btn-danger">Delte</button>
+                        </td>
+                      </tr>
+                  </tbody>
+               </table>
+              </div>
             </div>
-
           </div>
           <!--------------------------->
           <!-- END DELETE CATEGORY AREA -->
