--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="dropdown-item" href="#">
                   <i class="mdi mdi-cached me-2 text-success"></i> Activity Log </a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="login.html">
                   <i class="mdi mdi-logout me-2 text-primary"></i> Logout </a>
               </div>
             </li>
@@ -179,7 +179,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="login.html">
                 <span class="menu-title">Logout</span>
                 <i class="mdi mdi-logout menu-icon"></i>
               </a>
