Text Spelling Fixed

--- a/makeInvoice.html
+++ b/makeInvoice.html
@@ -314,7 +314,7 @@
             <br><hr><br>
 
             <div class="row">
-              <h1>Cash On Deliver</h1>
+              <h1>Cash On Delivery</h1>
               <form class="form-group" action="#">
                 <input type="search" name="search" id="search" placeholder="Search Invoice No" class="form-control">
               </form>
