Invoice Added & Some Changes

--- a/makeInvoice.html
+++ b/makeInvoice.html
@@ -238,7 +238,7 @@
                         <td>104, 105</td>
                         <td class="text-success">Processing</td>
                         <td>Cash On Delivery</td>
-                        <td><button class="btn btn-dark">See Invoice</button></td>
+                        <td><button onclick="window.location.href = 'invoice.html'" class="btn btn-dark">See Invoice</button></td>
                         <td><button class="btn btn-success">Mark As Shipped</button></td>
                         <td><button class="btn btn-success">Mark As Completed</button></td>
                         <td><button class="btn btn-danger">Mark As Cancel</button></td>
@@ -260,7 +260,7 @@
                         <td>114</td>
                         <td class="text-success">Shipped</td>
                         <td>Cash On Delivery</td>
-                        <td><button class="btn btn-dark">See Invoice</button></td>
+                        <td><button onclick="window.location.href = 'invoice.html'" class="btn btn-dark">See Invoice</button></td>
                         <td class="text-muted">Not Available</td>
                         <td><button class="btn btn-success">Mark As Completed</button></td>
                         <td><button class="btn btn-danger">Mark As Cancel</button></td>
@@ -271,7 +271,7 @@
                         <td>115</td>
                         <td class="text-success">Completed</td>
                         <td>Cash On Delivery</td>
-                        <td><button class="btn btn-dark">See Invoice</button></td>
+                        <td><button onclick="window.location.href = 'invoice.html'" class="btn btn-dark">See Invoice</button></td>
                         <td class="text-muted">Not Available</td>
                         <td class="text-muted">Not Available</td>
                         <td class="text-muted">Not Available</td>
@@ -307,7 +307,7 @@
                           <td>206, 207</td>
                           <td class="text-success">Processing</td>
                           <td>bKash</td>
-                          <td><button class="btn btn-dark">See Invoice</button></td>
+                          <td><button onclick="window.location.href = 'invoice.html'" class="btn btn-dark">See Invoice</button></td>
                           <td><button class="btn btn-success">Mark As Shipped</button></td>
                           <td><button class="btn btn-success">Mark As Completed</button></td>
                           <td><button class="btn btn-danger">Mark As Cancel</button></td>
@@ -329,7 +329,7 @@
                           <td>214</td>
                           <td class="text-success">Shipped</td>
                           <td>bKash</td>
-                          <td><button class="btn btn-dark">See Invoice</button></td>
+                          <td><button onclick="window.location.href = 'invoice.html'" class="btn btn-dark">See Invoice</button></td>
                           <td class="text-muted">Not Available</td>
                           <td><button class="btn btn-success">Mark As Completed</button></td>
                           <td><button class="btn btn-danger">Mark As Cancel</button></td>
@@ -340,7 +340,7 @@
                           <td>215</td>
                           <td class="text-success">Completed</td>
                           <td>Rocket</td>
-                          <td><button class="btn btn-dark">See Invoice</button></td>
+                          <td><button onclick="window.location.href = 'invoice.html'" class="btn btn-dark">See Invoice</button></td>
                           <td class="text-muted">Not Available</td>
                           <td class="text-muted">Not Available</td>
                           <td class="text-muted">Not Available</td>
