--- a/viewPayments.html
+++ b/viewPayments.html
@@ -231,7 +231,7 @@
                         <th>Transaction ID</th>
                         <th>Payment Date</th>
                         <th>Payment Status</th>
-                        <th>Action</th>
+                        <th colspan="2">Action</th>
                       </tr>
                       <tr>
                         <td>1</td>
@@ -245,8 +245,9 @@
                         <td>01556602995</td>
                         <td>X74HS98OPB80673NZ</td>
                         <td>12-2-2025</td>
-                        <td><button class="btn btn-dark">Mark As Clear</button></td>
-                        <td><button class="btn btn-danger">Delete</button></td>
+                        <td class="text-danger">Unpaid</td>
+                        <td><button class="btn btn-dark">Mark As Paid</button></td>
+                        <td><button class="btn btn-danger">Cancel</button></td>
                       </tr>
                       <tr>
                         <td>2</td>
@@ -259,6 +260,7 @@
                         <td>01556602995</td>
                         <td>X74HS98OPB80673NZ</td>
                         <td>12-2-2025</td>
+                        <td class="text-muted">Not Available</td>
                         <td class="text-muted">Not Available</td>
                         <td class="text-muted">Not Available</td>
                       </tr>
@@ -274,7 +276,8 @@
                         <td>01556602995</td>
                         <td>X74HS98OPB80673NZ</td>
                         <td>12-2-2025</td>
-                        <td class="text-success">Cleared</td>
+                        <td class="text-success">Paid</td>
+                        <td class="text-muted">Not Available</td>
                         <td class="text-muted">Not Available</td>
                       </tr>
                       <tr>
@@ -288,7 +291,8 @@
                         <td>01556602995</td>
                         <td>X74HS98OPB80673NZ</td>
                         <td>12-2-2025</td>
-                        <td class="text-success">Cleared</td>
+                        <td class="text-success">Paid</td>
+                        <td class="text-muted">Not Available</td>
                         <td class="text-muted">Not Available</td>
                       </tr>
                       <tr>
@@ -302,7 +306,8 @@
                         <td>01556602995</td>
                         <td>X74HS98OPB80673NZ</td>
                         <td>12-2-2025</td>
-                        <td class="text-success">Cleared</td>
+                        <td class="text-success">Paid</td>
+                        <td class="text-muted">Not Available</td>
                         <td class="text-muted">Not Available</td>
                       </tr>
                       <tr>
@@ -316,7 +321,8 @@
                         <td>01556602995</td>
                         <td>X74HS98OPB80673NZ</td>
                         <td>12-2-2025</td>
-                        <td class="text-success">Cleared</td>
+                        <td class="text-success">Paid</td>
+                        <td class="text-muted">Not Available</td>
                         <td class="text-muted">Not Available</td>
                       </tr>
                   </tbody>
